// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Signup Form component should render correctly 1`] = `
<div
  className="container"
>
  <div
    className="pt-5"
    style={
      Object {
        "textAlign": "center",
      }
    }
  >
    <form
      className="m-x-auto form card"
      onSubmit={[Function]}
    >
      <h1
        className="signin-text"
      >
        More-Recipes
      </h1>
      <div
        className="pb-4 pt-3 form-group"
      >
        <input
          className="form-control"
          name="username"
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="Username"
          required={true}
          type="text"
        />
      </div>
      <div
        className="pb-4 form-group"
      >
        <input
          className="form-control"
          name="email"
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="Email"
          required={true}
          type="email"
        />
      </div>
      <div
        className="pb-4 form-group"
      >
        <input
          className="form-control"
          id="pass"
          name="password"
          onChange={[Function]}
          onFocus={[Function]}
          pattern=".{7,12}"
          placeholder="Password"
          required={true}
          title="7 to 12 characters"
          type="password"
        />
      </div>
      <div
        className="pb-4 form-group"
      >
        <input
          className="form-control"
          name="confirmPassword"
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="Confirm Password"
          required={true}
          type="password"
        />
      </div>
      <button
        className="btn signin-btn btn-lg"
        style={
          Object {
            "color": "#f2b43c",
          }
        }
        type="submit"
      >
        Create Account
      </button>
      <div
        className="form-group"
      >
        <p>
          Already have an account? 
          <a
            href="/signin"
          >
            Log in.
          </a>
        </p>
      </div>
    </form>
  </div>
</div>
`;

exports[`Signup Form component should render error when email error exist 1`] = `
<div
  className="container"
>
  <div
    className="pt-5"
    style={
      Object {
        "textAlign": "center",
      }
    }
  >
    <form
      className="m-x-auto form card"
      onSubmit={[Function]}
    >
      <h1
        className="signin-text"
      >
        More-Recipes
      </h1>
      <div
        className="pb-4 pt-3 form-group"
      >
        <input
          className="form-control"
          name="username"
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="Username"
          required={true}
          type="text"
        />
      </div>
      <div
        className="pb-4 form-group"
      >
        <input
          className="form-control"
          name="email"
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="Email"
          required={true}
          type="email"
        />
        <div
          className="alert alert-danger"
        >
          Email already exist
        </div>
      </div>
      <div
        className="pb-4 form-group"
      >
        <input
          className="form-control"
          id="pass"
          name="password"
          onChange={[Function]}
          onFocus={[Function]}
          pattern=".{7,12}"
          placeholder="Password"
          required={true}
          title="7 to 12 characters"
          type="password"
        />
      </div>
      <div
        className="pb-4 form-group"
      >
        <input
          className="form-control"
          name="confirmPassword"
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="Confirm Password"
          required={true}
          type="password"
        />
      </div>
      <button
        className="btn signin-btn btn-lg"
        style={
          Object {
            "color": "#f2b43c",
          }
        }
        type="submit"
      >
        Create Account
      </button>
      <div
        className="form-group"
      >
        <p>
          Already have an account? 
          <a
            href="/signin"
          >
            Log in.
          </a>
        </p>
      </div>
    </form>
  </div>
</div>
`;

exports[`Signup Form component should render error when password error exist 1`] = `
<div
  className="container"
>
  <div
    className="pt-5"
    style={
      Object {
        "textAlign": "center",
      }
    }
  >
    <form
      className="m-x-auto form card"
      onSubmit={[Function]}
    >
      <h1
        className="signin-text"
      >
        More-Recipes
      </h1>
      <div
        className="pb-4 pt-3 form-group"
      >
        <input
          className="form-control"
          name="username"
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="Username"
          required={true}
          type="text"
        />
      </div>
      <div
        className="pb-4 form-group"
      >
        <input
          className="form-control"
          name="email"
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="Email"
          required={true}
          type="email"
        />
      </div>
      <div
        className="pb-4 form-group"
      >
        <input
          className="form-control"
          id="pass"
          name="password"
          onChange={[Function]}
          onFocus={[Function]}
          pattern=".{7,12}"
          placeholder="Password"
          required={true}
          title="7 to 12 characters"
          type="password"
        />
      </div>
      <div
        className="pb-4 form-group"
      >
        <input
          className="form-control"
          name="confirmPassword"
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="Confirm Password"
          required={true}
          type="password"
        />
        <div
          className="alert alert-danger"
        >
          Password does not match
        </div>
      </div>
      <button
        className="btn signin-btn btn-lg"
        style={
          Object {
            "color": "#f2b43c",
          }
        }
        type="submit"
      >
        Create Account
      </button>
      <div
        className="form-group"
      >
        <p>
          Already have an account? 
          <a
            href="/signin"
          >
            Log in.
          </a>
        </p>
      </div>
    </form>
  </div>
</div>
`;

exports[`Signup Form component should render error when username error exist 1`] = `
<div
  className="container"
>
  <div
    className="pt-5"
    style={
      Object {
        "textAlign": "center",
      }
    }
  >
    <form
      className="m-x-auto form card"
      onSubmit={[Function]}
    >
      <h1
        className="signin-text"
      >
        More-Recipes
      </h1>
      <div
        className="pb-4 pt-3 form-group"
      >
        <input
          className="form-control"
          name="username"
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="Username"
          required={true}
          type="text"
        />
        <div
          className="alert alert-danger"
        >
          User already exist
        </div>
      </div>
      <div
        className="pb-4 form-group"
      >
        <input
          className="form-control"
          name="email"
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="Email"
          required={true}
          type="email"
        />
      </div>
      <div
        className="pb-4 form-group"
      >
        <input
          className="form-control"
          id="pass"
          name="password"
          onChange={[Function]}
          onFocus={[Function]}
          pattern=".{7,12}"
          placeholder="Password"
          required={true}
          title="7 to 12 characters"
          type="password"
        />
      </div>
      <div
        className="pb-4 form-group"
      >
        <input
          className="form-control"
          name="confirmPassword"
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="Confirm Password"
          required={true}
          type="password"
        />
      </div>
      <button
        className="btn signin-btn btn-lg"
        style={
          Object {
            "color": "#f2b43c",
          }
        }
        type="submit"
      >
        Create Account
      </button>
      <div
        className="form-group"
      >
        <p>
          Already have an account? 
          <a
            href="/signin"
          >
            Log in.
          </a>
        </p>
      </div>
    </form>
  </div>
</div>
`;
